{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 68,
  "lineage": "b9d7e12a-1c32-df13-e438-9894d29957fe",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215428029888:elastic-ip/eipalloc-031b284ba97cb3fa4",
            "association_id": "eipassoc-02968dd74d7f0a242",
            "domain": "vpc",
            "id": "eipalloc-031b284ba97cb3fa4",
            "instance_id": "i-0d03fe30c84e52fa2",
            "network_interface_id": "eni-00bac990a5b29da5a",
            "network_interface_owner_id": "215428029888",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-50-16-94-190.compute-1.amazonaws.com",
            "public_ip": "50.16.94.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Project": "NetSPI_EIP"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "netspi_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fccab91b456acc2",
            "arn": "arn:aws:ec2:us-east-1:215428029888:instance/i-0bb0b734712bf98e4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_instance_profile",
            "id": "i-0bb0b734712bf98e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "netspi-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09cd80687a4d4bc69",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a39faea806182918",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-077652d69819f9df5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b196644480df2db",
            "tags": {
              "Name": "netspi_ec2_instance"
            },
            "tags_all": {
              "Name": "netspi_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077652d69819f9df5"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.netspi_efs",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.netspi_key_pair",
            "aws_security_group.netspi_sg",
            "aws_subnet.netspi_subnet",
            "aws_vpc.netspi_vpc",
            "tls_private_key.netspi_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netspi_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215428029888:internet-gateway/igw-0022fbeda66e9960a",
            "id": "igw-0022fbeda66e9960a",
            "owner_id": "215428029888",
            "tags": {
              "Name": "netspi_igw"
            },
            "tags_all": {
              "Name": "netspi_igw"
            },
            "vpc_id": "vpc-0c0c61d9d744cbbed"
          },
          "dependencies": [
            "aws_vpc.netspi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "netspi_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215428029888:route-table/rtb-083e4acc42150a532",
            "id": "rtb-083e4acc42150a532",
            "owner_id": "215428029888",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0022fbeda66e9960a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "netspi_vpc_route_table"
            },
            "tags_all": {
              "Name": "netspi_vpc_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c61d9d744cbbed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.netspi_gw",
            "aws_vpc.netspi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netspi_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256c55825707679d",
            "route_table_id": "rtb-083e4acc42150a532",
            "subnet_id": "subnet-02b196644480df2db"
          },
          "dependencies": [
            "aws_internet_gateway.netspi_gw",
            "aws_route_table.netspi_rt",
            "aws_subnet.netspi_subnet",
            "aws_vpc.netspi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netspi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215428029888:security-group/sg-077652d69819f9df5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077652d69819f9df5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240719120458696600000001",
            "name_prefix": "terraform-",
            "owner_id": "215428029888",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "netspi_vpc_security_group"
            },
            "tags_all": {
              "Name": "netspi_vpc_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0c61d9d744cbbed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netspi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "netspi_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215428029888:subnet/subnet-02b196644480df2db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b196644480df2db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215428029888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "netspi_subnet"
            },
            "tags_all": {
              "Name": "netspi_subnet"
            },
            "vpc_id": "vpc-0c0c61d9d744cbbed"
          },
          "dependencies": [
            "aws_vpc.netspi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netspi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215428029888:vpc/vpc-0c0c61d9d744cbbed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d732a1e88547d52d",
            "default_route_table_id": "rtb-03e4bedb2721ec1df",
            "default_security_group_id": "sg-0c60ed63eb13bedac",
            "dhcp_options_id": "dopt-09b8eb3e013372601",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0c61d9d744cbbed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e4bedb2721ec1df",
            "owner_id": "215428029888",
            "tags": {
              "Name": "netspi_vpc"
            },
            "tags_all": {
              "Name": "netspi_vpc"
            }
          }
        }
      ]
    }
  ]
}